--- a/static/style.css
+++ b/static/style.css
@@ -9,9 +9,9 @@ body, html {
     --background-ui: #202020;
     --background-root: #101010;
     --background-main: #303030;
-    --color-auxiliary: #555555;
-    --color-primary: #f5f4f0;
-    --color-secondary: white;
+    --color-auxiliary: #777777;
+    --color-primary: #d8d8d8;
+    --color-secondary: #f5f4f0;
     --color-selection: rgba(255, 255, 255, 0.2);
     --font: monospace;
 }
@@ -64,12 +64,12 @@ body {
 
 .CodeMirror-gutters, #editor>.CodeMirror {
     background-color: var(--background-main);
-    color: var(--color-primary);
+    color: var(--color-secondary);
 }
 
 .CodeMirror-cursors .CodeMirror-cursor {
     background-color: transparent;
-    border-left: 2px solid var(--color-primary);
+    border-left: 2px solid var(--color-secondary);
 }
 
 .CodeMirror-linenumbers .CodeMirror-linenumber {
@@ -77,7 +77,7 @@ body {
 }
 
 #editor>.cm-s-default .cm-header {
-    color: var(--color-secondary);
+    color: var(--color-primary);
 }
 
 .cm-header-1 {
@@ -105,7 +105,7 @@ body {
 }
 
 .cm-s-default .cm-variable-2 {
-    color: var(--color-secondary);
+    color: var(--color-primary);
 }
 
 .cm-s-default .CodeMirror-selected {
