--- a/static/style.css
+++ b/static/style.css
@@ -19,6 +19,7 @@ body, html {
     --color-md-string: #85c77c;
     --color-md-quote: #b1b1b1;
     --font: monospace;
+    --scrollbar-width: 0.5rem;
 }
 
 * {
@@ -166,8 +167,7 @@ body {
 }
 
 *::-webkit-scrollbar {
-    width: 8px;
-    /* width of the entire scrollbar */
+    width: var(--scrollbar-width);
 }
 
 *::-webkit-scrollbar-track {
@@ -175,5 +175,5 @@ body {
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: var(--color-auxiliary);
+    background-color: var(--color-selection);
 }
