--- a/static/style.css
+++ b/static/style.css
@@ -18,6 +18,7 @@ body, html {
     --color-md-url: #d568b6;
     --color-md-string: #85c77c;
     --color-md-quote: #b1b1b1;
+    --color-cm-html: #ff9a00;
     --font: monospace;
     --scrollbar-width: 0.5rem;
 }
@@ -105,6 +106,14 @@ body {
 
 #editor .cm-quote {
     color: var(--color-md-quote);
+}
+
+#editor .cm-tag {
+    color: var(--color-cm-html);
+}
+
+#editor .cm-attribute {
+    color: var(--cm-html);
 }
 
 .cm-header-1 {
