add search and keybinds for formatting

--- a/static/style.css
+++ b/static/style.css
@@ -66,6 +66,10 @@ body {
     font-size: 1rem;
 }
 
+.CodeMirror-dialog .CodeMirror-search-field {
+    font: var(--font);
+}
+
 .CodeMirror-gutters {
     border-right-color: var(--color-auxiliary);
 }
