--- a/static/style.css
+++ b/static/style.css
@@ -173,7 +173,6 @@ body {
 #statusline-dirty-state {
     margin-left: 0.5rem;
     color: var(--color-auxiliary);
-
 }
 
 #statusline-rightmost {
@@ -192,4 +191,18 @@ body {
 
 *::-webkit-scrollbar-thumb {
     background-color: var(--color-selection);
+}
+
+kbd {
+    background-color: #eee;
+    border-radius: 3px;
+    border: 1px solid #b4b4b4;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
+    color: #333;
+    display: inline-block;
+    font-size: .85em;
+    font-weight: 700;
+    line-height: 1;
+    padding: 2px 4px;
+    white-space: nowrap;
 }
