--- a/static/style.css
+++ b/static/style.css
@@ -194,15 +194,13 @@ body {
 }
 
 kbd {
-    background-color: #eee;
+    background-color: var(--background-ui);
     border-radius: 3px;
     border: 1px solid #b4b4b4;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
-    color: #333;
+    color: var(--color-secondary);
     display: inline-block;
     font-size: .85em;
     font-weight: 700;
-    line-height: 1;
-    padding: 2px 4px;
+    padding: 0.4rem;
     white-space: nowrap;
 }
