--- a/static/prompt.css
+++ b/static/prompt.css
@@ -88,7 +88,8 @@
 }
 
 .prompt-option.selected .prompt-option-desc {
-    color: var(--background-ui);
+    color: var(--color-secondary);
+    font-weight: bold;
 }
 
 #prompt-message {
