--- a/static/upload.css
+++ b/static/upload.css
@@ -56,6 +56,10 @@
     content: "Public";
 }
 
+#upload-is-public:hover {
+    filter: brightness(1.2);
+}
+
 .form-group>button, .form-group>input[type='text'], .form-group>input[type='checkbox'] {
     border: none;
     background-color: var(--ui-elem-bg);
