--- a/static/style.css
+++ b/static/style.css
@@ -36,6 +36,7 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
+    justify-content: center;
 }
 
 #editor {
@@ -57,6 +58,33 @@ body {
     resize: none;
     box-sizing: border-box;
     font-size: 1rem;
+}
+
+#preview {
+    display: none;
+    height: 100%;
+    width: 100%;
+    max-width: 100ch;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#preview-frame {
+    width: 100%;
+    border: none;
+    height: calc(100% - 3rem);
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+}
+
+#preview-controls {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 2rem;
+    margin: auto;
 }
 
 .CodeMirror-dialog .CodeMirror-search-field {
